<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/box1"
        android:layout_width="300dp"
        android:layout_height="120dp"

        android:layout_marginTop="140dp"
        android:src="@drawable/marketplace1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketplace1_title1"
        style="@style/marketplace1_title"
        android:text="@string/marketplace1_title1"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <TextView
        android:id="@+id/marketplace1_title2"
        style="@style/marketplace1_title"
        android:text="@string/marketplace1_title2"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/marketplace1_title1"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <TextView
        android:id="@+id/marketplace1_title3"
        style="@style/marketplace1_title"
        android:text="@string/marketplace1_title3"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/marketplace1_title2"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <Button
        android:id="@+id/marketplace1_btn"
        android:text="@string/marketplace1_btn"
        android:fontFamily="@font/advent_pro_semibold"
        android:textColor="@color/marketplace1_btn"
        android:background="@drawable/marketplace1_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/marketplace1_title3" />

    <Spinner
        android:id="@+id/marketplace1_spinner"
        android:layout_width="50dp"
        android:dropDownWidth="50dp"
        android:layout_height="30dp"
        android:background="@drawable/marketplace1_spinner2"
        android:entries="@array/marketplace1_spinner"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/box1"
        app:layout_constraintEnd_toEndOf="@+id/marketplace1_title1"
        app:layout_constraintStart_toStartOf="@+id/marketplace1_title1"
        app:layout_constraintTop_toBottomOf="@+id/marketplace1_title1" />

    <ImageView
        android:id="@+id/box2"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:src="@drawable/marketplace2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/box1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/box1"
        app:layout_constraintVertical_bias="0.419" />
</androidx.constraintlayout.widget.ConstraintLayout>