<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/box1"
        android:layout_width="300dp"
        android:layout_height="120dp"

        android:layout_marginTop="140dp"
        android:src="@drawable/marketplace1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketplace1_title1"
        style="@style/marketplace1_title"
        android:text="@string/marketplace1_title1"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <TextView
        android:id="@+id/marketplace1_title2"
        style="@style/marketplace1_title"
        android:text="@string/marketplace1_title2"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/marketplace1_title1"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <TextView
        android:id="@+id/marketplace1_title3"
        style="@style/marketplace1_title"
        android:text="@string/marketplace1_title3"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/marketplace1_title2"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <Button
        android:id="@+id/marketplace1_btn"
        style="@style/marketplace1_btn"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/marketplace1_title3" />

    <Spinner
        android:id="@+id/marketplace1_spinner"
        android:layout_width="50dp"
        android:dropDownWidth="50dp"
        android:layout_height="30dp"
        android:entries="@array/marketplace1_spinner"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/box1"
        app:layout_constraintEnd_toEndOf="@+id/marketplace1_title1"
        app:layout_constraintStart_toStartOf="@+id/marketplace1_title1"
        app:layout_constraintTop_toBottomOf="@+id/marketplace1_title1" />

    <EditText
        android:id="@+id/s_qty"
        style="@style/marketplace1_title"
        app:layout_constraintBottom_toBottomOf="@+id/box1"
        app:layout_constraintEnd_toEndOf="@+id/marketplace1_title2"
        app:layout_constraintStart_toStartOf="@+id/marketplace1_title2"
        app:layout_constraintTop_toBottomOf="@+id/marketplace1_title2" />

    <EditText
        android:id="@+id/s_bill"
        style="@style/marketplace1_title"
        app:layout_constraintBottom_toBottomOf="@+id/box1"
        app:layout_constraintEnd_toEndOf="@+id/marketplace1_title3"
        app:layout_constraintStart_toStartOf="@+id/marketplace1_title3"
        app:layout_constraintTop_toBottomOf="@+id/marketplace1_title3" />

    <ImageView
        android:id="@+id/box2"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:layout_marginTop="32dp"

        android:src="@drawable/marketplace2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/box1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/box1"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/marketplace2_title1"
        style="@style/marketplace1_title"
        android:text="@string/marketplace2_title1"

        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/trade_scroll_container"
        app:layout_constraintStart_toStartOf="@+id/box2"
        app:layout_constraintTop_toTopOf="@+id/box2"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:id="@+id/marketplace2_title2"
        style="@style/marketplace1_title"
        android:text="@string/marketplace2_title2"

        app:layout_constraintBottom_toBottomOf="@+id/marketplace2_title1"
        app:layout_constraintStart_toEndOf="@+id/marketplace2_title1"
        app:layout_constraintTop_toTopOf="@+id/marketplace2_title1" />

    <TextView
        android:id="@+id/marketplace2_title3"
        style="@style/marketplace1_title"
        android:text="@string/marketplace2_title3"

        app:layout_constraintBottom_toBottomOf="@+id/marketplace2_title2"
        app:layout_constraintStart_toEndOf="@+id/marketplace2_title2"
        app:layout_constraintTop_toTopOf="@+id/marketplace2_title2" />


    <TextView
        android:id="@+id/marketplace2_title4"
        style="@style/marketplace1_title"
        android:text="@string/marketplace2_title4"

        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/marketplace2_title3"
        app:layout_constraintStart_toEndOf="@+id/marketplace2_title3"
        app:layout_constraintTop_toTopOf="@+id/marketplace2_title3"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/marketplace2_title5"
        style="@style/marketplace1_title"
        android:layout_marginStart="12dp"

        android:layout_marginEnd="17dp"
        android:text="@string/marketplace2_title5"
        app:layout_constraintBottom_toBottomOf="@+id/marketplace2_title4"
        app:layout_constraintEnd_toEndOf="@+id/box2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/marketplace2_title4"
        app:layout_constraintTop_toTopOf="@+id/marketplace2_title4"
        app:layout_constraintVertical_bias="0.533" />

    <ScrollView
        android:id="@+id/trade_scroll_container"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/box2"
        app:layout_constraintEnd_toEndOf="@+id/box2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/box2"
        app:layout_constraintTop_toTopOf="@+id/box2"
        app:layout_constraintVertical_bias="0.492">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/username2"
                style="@style/marketplace1_title"
                android:text="balabala"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/giving2"
                style="@style/marketplace1_title"
                android:text="fish"
                app:layout_constraintBottom_toBottomOf="@+id/username2"
                app:layout_constraintStart_toEndOf="@+id/username2"
                app:layout_constraintTop_toTopOf="@+id/username2" />

            <TextView
                android:id="@+id/receiving2"
                style="@style/marketplace1_title"
                android:text="20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/giving2"
                app:layout_constraintTop_toTopOf="@+id/giving2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                style="@style/marketplace1_title"
                android:layout_marginStart="8dp"
                android:text="200"
                app:layout_constraintBottom_toBottomOf="@+id/receiving2"
                app:layout_constraintStart_toEndOf="@+id/receiving2"
                app:layout_constraintTop_toTopOf="@+id/receiving2"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                style="@style/marketplace2_btn"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.774"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:srcCompat="@drawable/ic_baseline_done_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>